--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,5 +7,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+  <Welcome />
+  <a href="ssrtest">Go to SSR Test Page</a>
 </Layout>
