--- a/src/pages/ssrtest.astro
+++ b/src/pages/ssrtest.astro
@@ -45,7 +45,7 @@ Astro.response.headers.set('Expires', '0');
     display: inline-block;
     margin-top: 1.5rem;
     text-decoration: none;
-    color: #ffd700;
+    color: #7be4ef;
     font-weight: bold;
     transition: 0.3s;
   }
